y.output
   0  $accept : program $end

   1  program : ToplevelDecl ';' programR

   2  programR : program
   3           |

   4  ToplevelDecl : Expression
   5               | ObjectDecl

   6  ObjectDecl : ObjectDecl1
   7             | ObjectDecl2

   8  ObjectDecl1 : Declaration ObjectDecl2

   9  ObjectDecl2 : LOCAL ObjectDecl IN ObjectDecl END ObjectDeclR

  10  ObjectDeclR : ';' ObjectDecl
  11              | ObjectDecl

  12  Declaration : VAL REC Pattern '=' Expression PatternExprR DeclarationR
  13              | VAL Pattern '=' Expression PatternExprR DeclarationR
  14              | FUN FunHeadingR DeclarationR
  15              | TYPE TypeBinding DeclarationR
  16              | DATATYPE DatatypeB1R DeclarationR
  17              | ABSTYPE DatatypeB1R WITH Declaration1 END DeclarationR
  18              | LOCAL Declaration1 IN Declaration1 END DeclarationR

  19  Declaration1 : VAL REC Pattern '=' Expression PatternExprR DeclarationR
  20               | VAL Pattern '=' Expression PatternExprR DeclarationR
  21               | FUN FunHeadingR DeclarationR
  22               | TYPE TypeBinding DeclarationR
  23               | DATATYPE DatatypeB1R DeclarationR
  24               | ABSTYPE DatatypeB1R WITH Declaration1 END DeclarationR
  25               | LOCAL Declaration1 IN Declaration1 END DeclarationR
  26               |

  27  DeclarationR : ';' Declaration
  28               | Declaration

  29  FunHeadingR : FunHeading ':' Type '=' Expression FunExprR
  30              | FunHeading '=' Expression FunExprR

  31  FunExprR : '|' FunHeadingR
  32           | AND FunHeadingR
  33           |

  34  DatatypeB1R : DatatypeBinding WITHTYPE TypeBinding
  35              | DatatypeBinding

  36  PatternExprR : AND VAL REC Pattern '=' Expression PatternExprR
  37               |

  38  FunHeading : Name AtomicPattern AtomicPatternStar
  39             | '(' AtomicPattern INFIXOPERATOR AtomicPattern ')' AtomicPatternStar
  40             | AtomicPattern INFIXOPERATOR AtomicPattern

  41  AtomicPatternStar : AtomicPattern AtomicPatternStar
  42                    |

  43  TypeBinding : TypeVarList Ident '=' Type TypeBindingR

  44  TypeBindingR : AND TypeBinding
  45               |

  46  DatatypeBinding : TypeVarList Ident '=' IdentOfType DatatypeBindingR

  47  DatatypeBindingR : AND DatatypeBinding
  48                   |

  49  IdentOfType : Ident OF Type IdentOfTypeR
  50              | Ident IdentOfTypeR

  51  IdentOfTypeR : '|' IdentOfType
  52               |

  53  TypeVarList : TYPEVAR
  54              | '(' TYPEVAR TypeVarStar ')'
  55              |

  56  TypeVarStar : ',' TypeVarStar
  57              |

  58  Expression : ExpressionY ':' Type
  59             | ExpressionY ANDALSO Expression
  60             | ExpressionY ORELSE Expression
  61             | ExpressionY

  62  ExpressionY : InfixExpression
  63              | IF Expression THEN Expression ELSE Expression
  64              | WHILE Expression DO Expression
  65              | CASE Expression OF Expression

  66  InfixExpression : AtomicExpressionPlus INFIXOPERATOR InfixExpression
  67                  | AtomicExpressionPlus

  68  AtomicExpressionPlus : AtomicExpression AtomicExpressionStar

  69  AtomicExpressionStar : AtomicExpression AtomicExpressionStar
  70                       |

  71  AtomicExpression : CONSTANT
  72                   | '(' ')'
  73                   | E2 ')'
  74                   | E2 ';' ExpressionPlus2 ')'
  75                   | E2 ',' ExpressionPlus1 ')'
  76                   | '[' ExpressionPlus1 ']'
  77                   | '[' ']'
  78                   | '{' LABEL '=' Expression LabelExpressionR '}'
  79                   | '{' '}'
  80                   | '#' LABEL
  81                   | LET Declaration IN ExpressionPlus2 END

  82  E2 : '(' Expression

  83  ExpressionPlus1 : Expression ',' ExpressionPlus1
  84                  | Expression

  85  ExpressionPlus2 : Expression ';' ExpressionPlus2
  86                  | Expression

  87  LabelExpressionR : ',' LABEL '=' Expression LabelExpressionR
  88                   |

  89  Pattern : PatternX
  90          | PatternY

  91  PatternY : PatternX INFIXOPERATOR Pattern
  92           | PatternX ':' Type

  93  PatternX : AtomicPattern
  94           | CompoundName AtomicPattern
  95           | Name ':' Type AS Pattern
  96           | Name AS Pattern

  97  AtomicPattern : '_'
  98                | CompoundIdent
  99                | CONSTANT
 100                | '(' Patterns ')'
 101                | '[' Patterns ']'

 102  Patterns : Pattern PatternR
 103           |

 104  PatternR : ',' Pattern PatternR
 105           |

 106  Type : TypeX
 107       | TypeY

 108  TypeX : TypeY CompoundIdent
 109        | TypeY '*' Type SubTypeR
 110        | TypeY "->" Type

 111  TypeY : TYPEVAR
 112        | CompoundIdent
 113        | SubType CompoundIdent
 114        | '{' LABEL ':' Type LabelTypeR '}'
 115        | '{' '}'
 116        | SingleType

 117  SingleType : A ')'

 118  A : '(' Type

 119  SubType : A ',' Type SType ')'

 120  SubTypeR : '*' Type
 121           |

 122  SType : ',' Type SType
 123        |

 124  LabelTypeR : ',' LABEL ':' Type LabelTypeR
 125             |

 126  CompoundName : IdentPlus
 127               | Name
 128               | Ident

 129  Name : Ident
 130       | OP INFIXOPERATOR

 131  CompoundIdent : Ident
 132                | IdentPlus

 133  IdentPlus : Ident '.' Ident IdentStar

 134  IdentStar : '.' Ident IdentStar
 135            |

 136  Ident : ALPHANUMERICIDENT

state 0
	$accept : . program $end  (0)

	ABSTYPE  shift 1
	CASE  shift 2
	DATATYPE  shift 3
	FUN  shift 4
	IF  shift 5
	LET  shift 6
	LOCAL  shift 7
	TYPE  shift 8
	VAL  shift 9
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	program  goto 16
	ToplevelDecl  goto 17
	Expression  goto 18
	ObjectDecl  goto 19
	ObjectDecl1  goto 20
	ObjectDecl2  goto 21
	Declaration  goto 22
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 1
	Declaration : ABSTYPE . DatatypeB1R WITH Declaration1 END DeclarationR  (17)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	DatatypeB1R  goto 30
	DatatypeBinding  goto 31
	TypeVarList  goto 32


state 2
	ExpressionY : CASE . Expression OF Expression  (65)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 33
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 3
	Declaration : DATATYPE . DatatypeB1R DeclarationR  (16)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	DatatypeB1R  goto 34
	DatatypeBinding  goto 31
	TypeVarList  goto 32


state 4
	Declaration : FUN . FunHeadingR DeclarationR  (14)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 38
	'['  shift 39
	'_'  shift 40
	.  error

	FunHeadingR  goto 41
	FunHeading  goto 42
	Name  goto 43
	AtomicPattern  goto 44
	Ident  goto 45
	CompoundIdent  goto 46
	IdentPlus  goto 47


state 5
	ExpressionY : IF . Expression THEN Expression ELSE Expression  (63)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 48
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 6
	AtomicExpression : LET . Declaration IN ExpressionPlus2 END  (81)

	ABSTYPE  shift 1
	DATATYPE  shift 3
	FUN  shift 4
	LOCAL  shift 49
	TYPE  shift 8
	VAL  shift 9
	.  error

	Declaration  goto 50


state 7
	ObjectDecl2 : LOCAL . ObjectDecl IN ObjectDecl END ObjectDeclR  (9)
	Declaration : LOCAL . Declaration1 IN Declaration1 END DeclarationR  (18)
	Declaration1 : .  (26)

	ABSTYPE  shift 51
	DATATYPE  shift 52
	FUN  shift 53
	LOCAL  shift 54
	TYPE  shift 55
	VAL  shift 56
	IN  reduce 26

	ObjectDecl  goto 57
	ObjectDecl1  goto 20
	ObjectDecl2  goto 21
	Declaration  goto 22
	Declaration1  goto 58


state 8
	Declaration : TYPE . TypeBinding DeclarationR  (15)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	TypeBinding  goto 59
	TypeVarList  goto 60


state 9
	Declaration : VAL . REC Pattern '=' Expression PatternExprR DeclarationR  (12)
	Declaration : VAL . Pattern '=' Expression PatternExprR DeclarationR  (13)

	OP  shift 35
	REC  shift 61
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	.  error

	Pattern  goto 63
	Name  goto 64
	AtomicPattern  goto 65
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	IdentPlus  goto 70


state 10
	ExpressionY : WHILE . Expression DO Expression  (64)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 71
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 11
	AtomicExpression : CONSTANT .  (71)

	.  reduce 71


state 12
	AtomicExpression : '(' . ')'  (72)
	E2 : '(' . Expression  (82)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	')'  shift 72
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 73
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 13
	AtomicExpression : '[' . ExpressionPlus1 ']'  (76)
	AtomicExpression : '[' . ']'  (77)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	']'  shift 74
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 75
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27
	ExpressionPlus1  goto 76


state 14
	AtomicExpression : '{' . LABEL '=' Expression LabelExpressionR '}'  (78)
	AtomicExpression : '{' . '}'  (79)

	LABEL  shift 77
	'}'  shift 78
	.  error


state 15
	AtomicExpression : '#' . LABEL  (80)

	LABEL  shift 79
	.  error


state 16
	$accept : program . $end  (0)

	$end  accept


state 17
	program : ToplevelDecl . ';' programR  (1)

	';'  shift 80
	.  error


state 18
	ToplevelDecl : Expression .  (4)

	.  reduce 4


state 19
	ToplevelDecl : ObjectDecl .  (5)

	.  reduce 5


state 20
	ObjectDecl : ObjectDecl1 .  (6)

	.  reduce 6


state 21
	ObjectDecl : ObjectDecl2 .  (7)

	.  reduce 7


state 22
	ObjectDecl1 : Declaration . ObjectDecl2  (8)

	LOCAL  shift 81
	.  error

	ObjectDecl2  goto 82


23: shift/reduce conflict (shift 83, reduce 61) on ANDALSO
23: shift/reduce conflict (shift 84, reduce 61) on ORELSE
23: shift/reduce conflict (shift 85, reduce 61) on ':'
state 23
	Expression : ExpressionY . ':' Type  (58)
	Expression : ExpressionY . ANDALSO Expression  (59)
	Expression : ExpressionY . ORELSE Expression  (60)
	Expression : ExpressionY .  (61)

	ANDALSO  shift 83
	ORELSE  shift 84
	':'  shift 85
	ABSTYPE  reduce 61
	AND  reduce 61
	DATATYPE  reduce 61
	DO  reduce 61
	ELSE  reduce 61
	END  reduce 61
	FUN  reduce 61
	LOCAL  reduce 61
	OF  reduce 61
	THEN  reduce 61
	TYPE  reduce 61
	VAL  reduce 61
	';'  reduce 61
	'|'  reduce 61
	')'  reduce 61
	','  reduce 61
	']'  reduce 61
	'}'  reduce 61


state 24
	ExpressionY : InfixExpression .  (62)

	.  reduce 62


state 25
	InfixExpression : AtomicExpressionPlus . INFIXOPERATOR InfixExpression  (66)
	InfixExpression : AtomicExpressionPlus .  (67)

	INFIXOPERATOR  shift 86
	ABSTYPE  reduce 67
	AND  reduce 67
	ANDALSO  reduce 67
	DATATYPE  reduce 67
	DO  reduce 67
	ELSE  reduce 67
	END  reduce 67
	FUN  reduce 67
	LOCAL  reduce 67
	OF  reduce 67
	ORELSE  reduce 67
	THEN  reduce 67
	TYPE  reduce 67
	VAL  reduce 67
	';'  reduce 67
	':'  reduce 67
	'|'  reduce 67
	')'  reduce 67
	','  reduce 67
	']'  reduce 67
	'}'  reduce 67


state 26
	AtomicExpressionPlus : AtomicExpression . AtomicExpressionStar  (68)
	AtomicExpressionStar : .  (70)

	LET  shift 6
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	ABSTYPE  reduce 70
	AND  reduce 70
	ANDALSO  reduce 70
	DATATYPE  reduce 70
	DO  reduce 70
	ELSE  reduce 70
	END  reduce 70
	FUN  reduce 70
	LOCAL  reduce 70
	OF  reduce 70
	ORELSE  reduce 70
	THEN  reduce 70
	TYPE  reduce 70
	VAL  reduce 70
	INFIXOPERATOR  reduce 70
	';'  reduce 70
	':'  reduce 70
	'|'  reduce 70
	')'  reduce 70
	','  reduce 70
	']'  reduce 70
	'}'  reduce 70

	AtomicExpression  goto 87
	AtomicExpressionStar  goto 88
	E2  goto 27


state 27
	AtomicExpression : E2 . ')'  (73)
	AtomicExpression : E2 . ';' ExpressionPlus2 ')'  (74)
	AtomicExpression : E2 . ',' ExpressionPlus1 ')'  (75)

	';'  shift 89
	')'  shift 90
	','  shift 91
	.  error


state 28
	TypeVarList : TYPEVAR .  (53)

	.  reduce 53


state 29
	TypeVarList : '(' . TYPEVAR TypeVarStar ')'  (54)

	TYPEVAR  shift 92
	.  error


state 30
	Declaration : ABSTYPE DatatypeB1R . WITH Declaration1 END DeclarationR  (17)

	WITH  shift 93
	.  error


state 31
	DatatypeB1R : DatatypeBinding . WITHTYPE TypeBinding  (34)
	DatatypeB1R : DatatypeBinding .  (35)

	WITHTYPE  shift 94
	ABSTYPE  reduce 35
	DATATYPE  reduce 35
	FUN  reduce 35
	LOCAL  reduce 35
	TYPE  reduce 35
	VAL  reduce 35
	WITH  reduce 35
	';'  reduce 35


state 32
	DatatypeBinding : TypeVarList . Ident '=' IdentOfType DatatypeBindingR  (46)

	ALPHANUMERICIDENT  shift 37
	.  error

	Ident  goto 95


state 33
	ExpressionY : CASE Expression . OF Expression  (65)

	OF  shift 96
	.  error


state 34
	Declaration : DATATYPE DatatypeB1R . DeclarationR  (16)

	ABSTYPE  shift 1
	DATATYPE  shift 3
	FUN  shift 4
	LOCAL  shift 49
	TYPE  shift 8
	VAL  shift 9
	';'  shift 97
	.  error

	Declaration  goto 98
	DeclarationR  goto 99


state 35
	Name : OP . INFIXOPERATOR  (130)

	INFIXOPERATOR  shift 100
	.  error


state 36
	AtomicPattern : CONSTANT .  (99)

	.  reduce 99


state 37
	Ident : ALPHANUMERICIDENT .  (136)

	.  reduce 136


state 38
	FunHeading : '(' . AtomicPattern INFIXOPERATOR AtomicPattern ')' AtomicPatternStar  (39)
	AtomicPattern : '(' . Patterns ')'  (100)
	Patterns : .  (103)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	')'  reduce 103

	Pattern  goto 101
	Name  goto 64
	AtomicPattern  goto 102
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	Patterns  goto 103
	IdentPlus  goto 70


state 39
	AtomicPattern : '[' . Patterns ']'  (101)
	Patterns : .  (103)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	']'  reduce 103

	Pattern  goto 101
	Name  goto 64
	AtomicPattern  goto 65
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	Patterns  goto 104
	IdentPlus  goto 70


state 40
	AtomicPattern : '_' .  (97)

	.  reduce 97


state 41
	Declaration : FUN FunHeadingR . DeclarationR  (14)

	ABSTYPE  shift 1
	DATATYPE  shift 3
	FUN  shift 4
	LOCAL  shift 49
	TYPE  shift 8
	VAL  shift 9
	';'  shift 97
	.  error

	Declaration  goto 98
	DeclarationR  goto 105


state 42
	FunHeadingR : FunHeading . ':' Type '=' Expression FunExprR  (29)
	FunHeadingR : FunHeading . '=' Expression FunExprR  (30)

	'='  shift 106
	':'  shift 107
	.  error


state 43
	FunHeading : Name . AtomicPattern AtomicPatternStar  (38)

	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	.  error

	AtomicPattern  goto 108
	Ident  goto 109
	CompoundIdent  goto 46
	IdentPlus  goto 47


state 44
	FunHeading : AtomicPattern . INFIXOPERATOR AtomicPattern  (40)

	INFIXOPERATOR  shift 110
	.  error


state 45
	Name : Ident .  (129)
	CompoundIdent : Ident .  (131)
	IdentPlus : Ident . '.' Ident IdentStar  (133)

	'.'  shift 111
	CONSTANT  reduce 129
	INFIXOPERATOR  reduce 131
	ALPHANUMERICIDENT  reduce 129
	'('  reduce 129
	'['  reduce 129
	'_'  reduce 129


state 46
	AtomicPattern : CompoundIdent .  (98)

	.  reduce 98


state 47
	CompoundIdent : IdentPlus .  (132)

	.  reduce 132


state 48
	ExpressionY : IF Expression . THEN Expression ELSE Expression  (63)

	THEN  shift 112
	.  error


state 49
	Declaration : LOCAL . Declaration1 IN Declaration1 END DeclarationR  (18)
	Declaration1 : .  (26)

	ABSTYPE  shift 113
	DATATYPE  shift 114
	FUN  shift 115
	LOCAL  shift 116
	TYPE  shift 117
	VAL  shift 118
	IN  reduce 26

	Declaration1  goto 58


state 50
	AtomicExpression : LET Declaration . IN ExpressionPlus2 END  (81)

	IN  shift 119
	.  error


state 51
	Declaration : ABSTYPE . DatatypeB1R WITH Declaration1 END DeclarationR  (17)
	Declaration1 : ABSTYPE . DatatypeB1R WITH Declaration1 END DeclarationR  (24)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	DatatypeB1R  goto 120
	DatatypeBinding  goto 31
	TypeVarList  goto 32


state 52
	Declaration : DATATYPE . DatatypeB1R DeclarationR  (16)
	Declaration1 : DATATYPE . DatatypeB1R DeclarationR  (23)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	DatatypeB1R  goto 121
	DatatypeBinding  goto 31
	TypeVarList  goto 32


state 53
	Declaration : FUN . FunHeadingR DeclarationR  (14)
	Declaration1 : FUN . FunHeadingR DeclarationR  (21)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 38
	'['  shift 39
	'_'  shift 40
	.  error

	FunHeadingR  goto 122
	FunHeading  goto 42
	Name  goto 43
	AtomicPattern  goto 44
	Ident  goto 45
	CompoundIdent  goto 46
	IdentPlus  goto 47


state 54
	ObjectDecl2 : LOCAL . ObjectDecl IN ObjectDecl END ObjectDeclR  (9)
	Declaration : LOCAL . Declaration1 IN Declaration1 END DeclarationR  (18)
	Declaration1 : LOCAL . Declaration1 IN Declaration1 END DeclarationR  (25)
	Declaration1 : .  (26)

	ABSTYPE  shift 51
	DATATYPE  shift 52
	FUN  shift 53
	LOCAL  shift 54
	TYPE  shift 55
	VAL  shift 56
	IN  reduce 26

	ObjectDecl  goto 57
	ObjectDecl1  goto 20
	ObjectDecl2  goto 21
	Declaration  goto 22
	Declaration1  goto 123


state 55
	Declaration : TYPE . TypeBinding DeclarationR  (15)
	Declaration1 : TYPE . TypeBinding DeclarationR  (22)
	TypeVarList : .  (55)

	TYPEVAR  shift 28
	'('  shift 29
	ALPHANUMERICIDENT  reduce 55

	TypeBinding  goto 124
	TypeVarList  goto 60


state 56
	Declaration : VAL . REC Pattern '=' Expression PatternExprR DeclarationR  (12)
	Declaration : VAL . Pattern '=' Expression PatternExprR DeclarationR  (13)
	Declaration1 : VAL . REC Pattern '=' Expression PatternExprR DeclarationR  (19)
	Declaration1 : VAL . Pattern '=' Expression PatternExprR DeclarationR  (20)

	OP  shift 35
	REC  shift 125
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	.  error

	Pattern  goto 126
	Name  goto 64
	AtomicPattern  goto 65
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	IdentPlus  goto 70


state 57
	ObjectDecl2 : LOCAL ObjectDecl . IN ObjectDecl END ObjectDeclR  (9)

	IN  shift 127
	.  error


state 58
	Declaration : LOCAL Declaration1 . IN Declaration1 END DeclarationR  (18)

	IN  shift 128
	.  error


state 59
	Declaration : TYPE TypeBinding . DeclarationR  (15)

	ABSTYPE  shift 1
	DATATYPE  shift 3
	FUN  shift 4
	LOCAL  shift 49
	TYPE  shift 8
	VAL  shift 9
	';'  shift 97
	.  error

	Declaration  goto 98
	DeclarationR  goto 129


state 60
	TypeBinding : TypeVarList . Ident '=' Type TypeBindingR  (43)

	ALPHANUMERICIDENT  shift 37
	.  error

	Ident  goto 130


state 61
	Declaration : VAL REC . Pattern '=' Expression PatternExprR DeclarationR  (12)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	.  error

	Pattern  goto 131
	Name  goto 64
	AtomicPattern  goto 65
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	IdentPlus  goto 70


state 62
	AtomicPattern : '(' . Patterns ')'  (100)
	Patterns : .  (103)

	OP  shift 35
	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	')'  reduce 103

	Pattern  goto 101
	Name  goto 64
	AtomicPattern  goto 65
	Ident  goto 66
	PatternX  goto 67
	PatternY  goto 68
	CompoundName  goto 69
	CompoundIdent  goto 46
	Patterns  goto 103
	IdentPlus  goto 70


state 63
	Declaration : VAL Pattern . '=' Expression PatternExprR DeclarationR  (13)

	'='  shift 132
	.  error


state 64
	PatternX : Name . ':' Type AS Pattern  (95)
	PatternX : Name . AS Pattern  (96)
	CompoundName : Name .  (127)

	AS  shift 133
	':'  shift 134
	CONSTANT  reduce 127
	ALPHANUMERICIDENT  reduce 127
	'('  reduce 127
	'['  reduce 127
	'_'  reduce 127


state 65
	PatternX : AtomicPattern .  (93)

	.  reduce 93


66: reduce/reduce conflict (reduce 128, reduce 129) on CONSTANT
66: reduce/reduce conflict (reduce 128, reduce 129) on ALPHANUMERICIDENT
66: reduce/reduce conflict (reduce 129, reduce 131) on ':'
66: reduce/reduce conflict (reduce 128, reduce 129) on '('
66: reduce/reduce conflict (reduce 128, reduce 129) on '['
66: reduce/reduce conflict (reduce 128, reduce 129) on '_'
state 66
	CompoundName : Ident .  (128)
	Name : Ident .  (129)
	CompoundIdent : Ident .  (131)
	IdentPlus : Ident . '.' Ident IdentStar  (133)

	'.'  shift 111
	AS  reduce 129
	CONSTANT  reduce 128
	INFIXOPERATOR  reduce 131
	ALPHANUMERICIDENT  reduce 128
	'='  reduce 131
	':'  reduce 129
	'('  reduce 128
	')'  reduce 131
	','  reduce 131
	'['  reduce 128
	']'  reduce 131
	'_'  reduce 128


67: shift/reduce conflict (shift 135, reduce 89) on INFIXOPERATOR
67: shift/reduce conflict (shift 136, reduce 89) on ':'
state 67
	Pattern : PatternX .  (89)
	PatternY : PatternX . INFIXOPERATOR Pattern  (91)
	PatternY : PatternX . ':' Type  (92)

	INFIXOPERATOR  shift 135
	':'  shift 136
	'='  reduce 89
	')'  reduce 89
	','  reduce 89
	']'  reduce 89


state 68
	Pattern : PatternY .  (90)

	.  reduce 90


state 69
	PatternX : CompoundName . AtomicPattern  (94)

	CONSTANT  shift 36
	ALPHANUMERICIDENT  shift 37
	'('  shift 62
	'['  shift 39
	'_'  shift 40
	.  error

	AtomicPattern  goto 137
	Ident  goto 109
	CompoundIdent  goto 46
	IdentPlus  goto 47


state 70
	CompoundName : IdentPlus .  (126)
	CompoundIdent : IdentPlus .  (132)

	CONSTANT  reduce 126
	INFIXOPERATOR  reduce 132
	ALPHANUMERICIDENT  reduce 126
	'='  reduce 132
	':'  reduce 132
	'('  reduce 126
	')'  reduce 132
	','  reduce 132
	'['  reduce 126
	']'  reduce 132
	'_'  reduce 126


state 71
	ExpressionY : WHILE Expression . DO Expression  (64)

	DO  shift 138
	.  error


state 72
	AtomicExpression : '(' ')' .  (72)

	.  reduce 72


state 73
	E2 : '(' Expression .  (82)

	.  reduce 82


state 74
	AtomicExpression : '[' ']' .  (77)

	.  reduce 77


state 75
	ExpressionPlus1 : Expression . ',' ExpressionPlus1  (83)
	ExpressionPlus1 : Expression .  (84)

	','  shift 139
	')'  reduce 84
	']'  reduce 84


state 76
	AtomicExpression : '[' ExpressionPlus1 . ']'  (76)

	']'  shift 140
	.  error


state 77
	AtomicExpression : '{' LABEL . '=' Expression LabelExpressionR '}'  (78)

	'='  shift 141
	.  error


state 78
	AtomicExpression : '{' '}' .  (79)

	.  reduce 79


state 79
	AtomicExpression : '#' LABEL .  (80)

	.  reduce 80


state 80
	program : ToplevelDecl ';' . programR  (1)
	programR : .  (3)

	ABSTYPE  shift 1
	CASE  shift 2
	DATATYPE  shift 3
	FUN  shift 4
	IF  shift 5
	LET  shift 6
	LOCAL  shift 7
	TYPE  shift 8
	VAL  shift 9
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	$end  reduce 3

	program  goto 142
	ToplevelDecl  goto 17
	programR  goto 143
	Expression  goto 18
	ObjectDecl  goto 19
	ObjectDecl1  goto 20
	ObjectDecl2  goto 21
	Declaration  goto 22
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 81
	ObjectDecl2 : LOCAL . ObjectDecl IN ObjectDecl END ObjectDeclR  (9)

	ABSTYPE  shift 1
	DATATYPE  shift 3
	FUN  shift 4
	LOCAL  shift 7
	TYPE  shift 8
	VAL  shift 9
	.  error

	ObjectDecl  goto 57
	ObjectDecl1  goto 20
	ObjectDecl2  goto 21
	Declaration  goto 22


state 82
	ObjectDecl1 : Declaration ObjectDecl2 .  (8)

	.  reduce 8


state 83
	Expression : ExpressionY ANDALSO . Expression  (59)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 144
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 84
	Expression : ExpressionY ORELSE . Expression  (60)

	CASE  shift 2
	IF  shift 5
	LET  shift 6
	WHILE  shift 10
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	Expression  goto 145
	ExpressionY  goto 23
	InfixExpression  goto 24
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 85
	Expression : ExpressionY ':' . Type  (58)

	TYPEVAR  shift 146
	ALPHANUMERICIDENT  shift 37
	'('  shift 147
	'{'  shift 148
	.  error

	Type  goto 149
	Ident  goto 109
	CompoundIdent  goto 150
	TypeX  goto 151
	TypeY  goto 152
	SubType  goto 153
	SingleType  goto 154
	A  goto 155
	IdentPlus  goto 47


state 86
	InfixExpression : AtomicExpressionPlus INFIXOPERATOR . InfixExpression  (66)

	LET  shift 6
	CONSTANT  shift 11
	'('  shift 12
	'['  shift 13
	'{'  shift 14
	'#'  shift 15
	.  error

	InfixExpression  goto 156
	AtomicExpressionPlus  goto 25
	AtomicExpression  goto 26
	E2  goto 27


state 87
	AtomicExpressionStar : AtomicExpression . AtomicExpressionStar  (69)
	AtomicExpressionStar : .  (70)
